now main pdf called out.pdf Blanka is now autoRita

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <iframe src="250713_vylet_na_jih.pdf"></iframe>
+  <iframe src="out.pdf"></iframe>
 </body>
 </html>
 
