update index to reach original .pdf content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: sans-serif;
-      max-width: 800px;
+      max-width: 1000px;
       margin: auto;
       padding: 2em;
     }
@@ -14,7 +14,7 @@
       margin-bottom: 3em;
     }
     img {
-      max-width: 100%;
+      max-width: 70%;
       border-radius: 8px;
       margin-top: 1em;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
@@ -28,16 +28,36 @@
   <div class="section">
     <div id="intro"></div>
     <img src="pic/wanna_up.png" alt="Wanna Up?">
+    <img src="pic/hidden_volvo.png" alt="Toto je Volvo">
   </div>
 
   <div class="section">
-    <div id="text2"></div>
-    <img src="obrazek2.jpg" alt="Obrázek 2">
+    <div id="day1"></div>
+    <img src="pic/brutalism1.png" alt="Terst">
+    <img src="pic/brutalism2.png" alt="Terst">
+    <img src="pic/random_terst.png" alt="Terst">
   </div>
 
   <div class="section">
-    <div id="text3"></div>
-    <img src="obrazek3.jpg" alt="Obrázek 3">
+    <div id="day2"></div>
+    <img src="pic/hills1.png" alt="Kopce">
+    <img src="pic/hills2.png" alt="Kopce">
+    <img src="pic/hills_billa.jpg" alt="Balkansky vylet"> 
+  </div>
+
+  <div class="section">
+    <div id="day5"></div>
+    <img src="pic/lublan.png" alt="Lublan">
+    <img src="pic/random_stan.png" alt="Snad se nam podari spat i takhle">
+  </div>
+
+  <div class="section">
+    <div id="day6"></div>
+    <img src="pic/snemovej_ohen.png" alt="Snem Kruhu">
+  </div>
+
+  <div class="section">
+    <div id="outro"></div>
   </div>
 
   <script>
@@ -54,8 +74,13 @@
     }
 
     loadText("intro", "text/intro.txt");
-    loadText("text2", "text/popis1.txt");
-    loadText("text3", "text/zaver.txt");
+    loadText("day1", "text/day1.txt");
+    loadText("day2", "text/day2.txt");
+    loadText("day3", "text/day3.txt");
+    loadText("day4", "text/day4.txt");
+    loadText("day5", "text/day5.txt");
+    loadText("day6", "text/day6.txt");
+    loadText("outro", "text/outro.txt");
   </script>
 
 </body>
