ext of pics should be now .jpg __facepalming__

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
   <div class="section">
     <div id="intro"></div>
-    <img src="pic/wanna_up.png" alt="Wanna Up?">
-    <img src="pic/hidden_volvo.png" alt="Toto je Volvo">
+    <img src="pic/wanna_up.jpg" alt="Wanna Up?">
+    <img src="pic/hidden_volvo.jpg" alt="Toto je Volvo">
   </div>
 
   <div class="section">
@@ -46,27 +46,27 @@
 
   <div class="section">
     <div id="day1"></div>
-    <img src="pic/brutalism1.png" alt="Terst">
-    <img src="pic/brutalism2.png" alt="Terst">
-    <img src="pic/random_terst.png" alt="Terst">
+    <img src="pic/brutalism1.jpg" alt="Terst">
+    <img src="pic/brutalism2.jpg" alt="Terst">
+    <img src="pic/random_terst.jpg" alt="Terst">
   </div>
 
   <div class="section">
     <div id="day2"></div>
-    <img src="pic/hills1.png" alt="Kopce">
-    <img src="pic/hills2.png" alt="Kopce">
+    <img src="pic/hills1.jpg" alt="Kopce">
+    <img src="pic/hills2.jpg" alt="Kopce">
     <img src="pic/hills_billa.jpg" alt="Balkansky vylet"> 
   </div>
 
   <div class="section">
     <div id="day5"></div>
-    <img src="pic/lublan.png" alt="Lublan">
-    <img src="pic/random_stan.png" alt="Snad se nam podari spat i takhle">
+    <img src="pic/lublan.jpg" alt="Lublan">
+    <img src="pic/random_stan.jpg" alt="Snad se nam podari spat i takhle">
   </div>
 
   <div class="section">
     <div id="day6"></div>
-    <img src="pic/snemovej_ohen.png" alt="Snem Kruhu">
+    <img src="pic/snemovej_ohen.jpg" alt="Snem Kruhu">
   </div>
 
   <div class="section">
