specification of path to points, added lazy loading to some pics

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
 
   <div class="section">
     <div id="day2"></div>
-    <img src="pic/hills1.jpg" alt="Kopce">
-    <img src="pic/hills2.jpg" alt="Kopce">
-    <img src="pic/hills_billa.jpg" alt="Balkansky vylet"> 
+    <img src="pic/hills1.jpg" alt="Kopce" loading="lazy">
+    <img src="pic/hills2.jpg" alt="Kopce" loading="lazy">
+    <img src="pic/hills_billa.jpg" alt="Balkansky vylet" loading="lazy"> 
   </div>
 
   <div class="section">
     <div id="day5"></div>
-    <img src="pic/lublan.jpg" alt="Lublan">
-    <img src="pic/random_stan.jpg" alt="Snad se nam podari spat i takhle">
+    <img src="pic/lublan.jpg" alt="Lublan" loading="lazy">
+    <img src="pic/random_stan.jpg" alt="Snad se nam podari spat i takhle" loading="lazy">
   </div>
 
   <div class="section">
     <div id="day6"></div>
-    <img src="pic/snemovej_ohen.jpg" alt="Snem Kruhu">
+    <img src="pic/snemovej_ohen.jpg" alt="Snem Kruhu" loading="lazy">
   </div>
 
   <div class="section">
@@ -105,7 +105,7 @@
       }).addTo(map);
     
       // Načtení GeoJSON vrstvy
-      fetch('data/body.geojson')
+      fetch('map/out_points.geojson')
         .then(response => response.json())
         .then(data => {
           L.geoJSON(data).addTo(map);
