wron leaflet integration into head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Vylet</title>
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
   <style>
     body {
       font-family: sans-serif;
@@ -19,16 +23,14 @@
       margin-top: 1em;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
-
-    <!-- Leaflet CSS & JS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <style>
-      #map {
-        height: 90vh;
-        width: 100%;
-      }
+    #map {
+      height: 90vh;
+      width: 100%;
+    }
   </style>
+
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
 
