--- a/index.html
+++ b/index.html
@@ -97,22 +97,35 @@
     loadText("day6", "text/day6.txt");
     loadText("outro", "text/outro.txt");
   </script>
-    <script>
-      // Inicializace mapy
-      var map = L.map('map').setView([49.8, 15.5], 7); // uprav střed a zoom
-    
-      // OSM podklad
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OSM contributors'
-      }).addTo(map);
-    
-      // Načtení GeoJSON vrstvy
-      fetch('map/out_points.geojson')
-        .then(response => response.json())
-        .then(data => {
-          L.geoJSON(data).addTo(map);
-        });
-    </script>
+  <script>
+    // Inicializace mapy
+    var map = L.map('map').setView([45.55, 14.11], 10);
+  
+    // OSM podklad
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OSM contributors'
+    }).addTo(map);
+  
+    // Načtení GeoJSON vrstvy
+    fetch('map/out_points.geojson')
+      .then(response => response.json())
+      .then(data => {
+        L.geoJSON(data, {
+          onEachFeature: function (feature, layer) {
+            if (feature.properties) {
+              let popupContent = `
+                <strong>${feature.properties.where_to || "Bez názvu"}</strong><br/>
+                ${feature.properties.when || "Žádný popis"}
+              `;
+              layer.bindPopup(popupContent);
+            }
+          }
+        }).addTo(map);
+      })
+      .catch(error => {
+        console.error("Chyba při načítání GeoJSON vrstvy:", error);
+      });
+  </script>
 
 </body>
 </html>
