--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
     <div id="outro"></div>
   </div>
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScDnwOgNpA2iO8a0mnkXkuvXqJunrnEAsUGsWKXMK1xaHH3lQ/viewform?embedded=true" width="640" height="626" frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
+
   <script>
     function loadText(id, file) {
       fetch(file)
