--- a/index.html
+++ b/index.html
@@ -88,17 +88,23 @@
     <div id="outro"></div>
   </div>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScDnwOgNpA2iO8a0mnkXkuvXqJunrnEAsUGsWKXMK1xaHH3lQ/viewform?embedded=true" width="640" height="626" frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScDnwOgNpA2iO8a0mnkXkuvXqJunrnEAsUGsWKXMK1xaHH3lQ/viewform?embedded=true"
+    width="640"
+    height="626"
+    frameborder="0"
+    marginheight="0"
+    marginwidth="0">Načítání…
+  </iframe>
 
   <script>
     function loadText(id, file) {
       fetch(file)
         .then(response => response.text())
         .then(data => {
-          document.getElementById(id).innerText = data;
+          document.getElementById(id).innerHTML = data;
         })
         .catch(error => {
-          document.getElementById(id).innerText = "Nepodařilo se načíst text.";
+          document.getElementById(id).innerHTML = "Nepodařilo se načíst text.";
           console.error("Chyba při načítání souboru:", file, error);
         });
     }
