--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
     marginwidth="0">Načítání…
   </iframe>
 
+  <iframe width="560" height="315" 
+          src="https://www.youtube.com/watch?v=wjAysv3OhUE" 
+          title="captcha" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen>
+  </iframe>
+
   <script>
     fetch('text/main.md')
       .then(response => response.text())
