--- a/index.html
+++ b/index.html
@@ -79,13 +79,15 @@
     marginwidth="0">Načítání…
   </iframe>
 
-  <iframe width="560" height="315" 
-          src="https://www.youtube.com/watch?v=wjAysv3OhUE" 
-          title="captcha" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen>
-  </iframe>
+  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
+    <iframe src="https://www.youtube.com/embed/wjAysv3OhUE"
+            title="captcha"
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+    </iframe>
+  </div>
 
   <script>
     fetch('text/main.md')
