--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div id="txt">Loudink...</div>
 
   <div class="section">
-    <h2 style="text-align: center; margin-bottom: 1rem;">Mapa</h2>
+    <h2 style="text-align: left; margin-bottom: 1rem;">Mapa</h2>
     <button id="map-toggle">Aktivovat mapu pro pohyb</button>
     <div id="map"></div>
   </div>
@@ -69,35 +69,21 @@
   </div>
 
   <section class="dalsi">
-    <h2 style="text-align: center; margin-bottom: 1rem;">Další výjevy</h2>
+    <h2 style="text-align: center; margin-bottom: 1rem; margin-top: 2rem;">
+      Další výjevy
+    </h2>
   
-    <div style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; text-align: center;">
-  
-      <div style="flex: 1 1 200px; max-width: 250px;">
+    <div style="display: flex; justify-content: space-between; gap: 1rem; text-align: center;">
+
+      <div style="flex: 1;">
+        <img src="pic/hills_billa.jpg" alt="Balkánský výlet" style="width: 100%;">
+        <p>Tohle bohužel asi neuvidíme</p>
+      </div>
+
+      <div style="flex: 1;">
         <img src="pic/wanna_up.jpg" alt="Wanna Up?" style="width: 100%;">
         <p>Wanna Up?</p>
       </div>
-  
-      <div style="flex: 1 1 200px; max-width: 250px;">
-        <img src="pic/hidden_volvo.jpg" alt="Toto je Volvo" style="width: 100%;">
-        <p>Toto je Volvo</p>
-      </div>
-  
-      <div style="flex: 1 1 200px; max-width: 250px;">
-        <img src="pic/brutalism2.jpg" alt="Terst" style="width: 100%;">
-        <p>Beton bude</p>
-      </div>
-  
-      <div style="flex: 1 1 200px; max-width: 250px;">
-        <img src="pic/hills2.jpg" alt="Kopce" style="width: 100%;" loading="lazy">
-        <p>Svahy Risnjaku</p>
-      </div>
-  
-      <div style="flex: 1 1 200px; max-width: 250px;">
-        <img src="pic/hills_billa.jpg" alt="Balkánský výlet" style="width: 100%;" loading="lazy">
-        <p>Tohle bohužel asi neuvidíme</p>
-      </div>
-  
     </div>
   </section>
 
