--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
       margin: auto;
       padding: 2em;
     }
+    .tabs {
+      display: flex;
+      margin-bottom: 1em;
+      border-bottom: 2px solid #ccc;
+    }
+    .tab {
+      padding: 0.5em 1em;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      border-bottom: none;
+      margin-right: 0.5em;
+      background: #eee;
+      border-radius: 5px 5px 0 0;
+    }
+    .tab.active {
+      background: white;
+      font-weight: bold;
+    }
+    .tab-content {
+      display: none;
+    }
+    .tab-content.active {
+      display: block;
+    }
     .section {
       margin-bottom: 3em;
     }
@@ -48,44 +72,74 @@
 </head>
 <body>
 
-  <h1>Výlet na jih 2025</h1>
-
-  <div id="txt">Loudink...</div>
-
-  <div class="section">
-    <h2 style="text-align: left; margin-bottom: 1rem;">Mapa</h2>
-    <button id="map-toggle">Aktivovat mapu pro pohyb</button>
-    <div id="map"></div>
+  <div class="tabs">
+    <div class="tab active" data-tab="1">Přehled</div>
+    <div class="tab" data-tab="2">Kytky</div>
   </div>
 
-  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
-    <iframe src="https://www.youtube.com/embed/wjAysv3OhUE"
-            title="captcha"
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-    </iframe>
-  </div>
+  <div class="tab-content active" id="tab-content-1">
 
-  <section class="dalsi">
-    <h2 style="text-align: center; margin-bottom: 1rem; margin-top: 2rem;">
-      Další výjevy
-    </h2>
-  
-    <div style="display: flex; justify-content: space-between; gap: 1rem; text-align: center;">
+    <h1>Výlet na jih 2025</h1>
 
-      <div style="flex: 1;">
-        <img src="pic/hills_billa.jpg" alt="Balkánský výlet" style="width: 100%;">
-        <p>Tohle bohužel asi neuvidíme</p>
-      </div>
+    <div id="txt">Loudink...</div>
 
-      <div style="flex: 1;">
-        <img src="pic/wanna_up.jpg" alt="Wanna Up?" style="width: 100%;">
-        <p>Wanna Up?</p>
-      </div>
+    <div class="section">
+      <h2 style="text-align: left; margin-bottom: 1rem;">Mapa</h2>
+      <button id="map-toggle">Aktivovat mapu pro pohyb</button>
+      <div id="map"></div>
     </div>
-  </section>
+
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
+      <iframe src="https://www.youtube.com/embed/wjAysv3OhUE"
+              title="captcha"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+      </iframe>
+    </div>
+
+    <section class="dalsi">
+      <h2 style="text-align: center; margin-bottom: 1rem; margin-top: 2rem;">
+        Další výjevy
+      </h2>
+    
+      <div style="display: flex; justify-content: space-between; gap: 1rem; text-align: center;">
+  
+        <div style="flex: 1;">
+          <img src="pic/hills_billa.jpg" alt="Balkánský výlet" style="width: 100%;">
+          <p>Tohle bohužel asi neuvidíme</p>
+        </div>
+  
+        <div style="flex: 1;">
+          <img src="pic/wanna_up.jpg" alt="Wanna Up?" style="width: 100%;">
+          <p>Wanna Up?</p>
+        </div>
+      </div>
+    </section>
+
+  </div>
+
+  <div class="tab-content" id="tab-content-2">
+    <h2>Kytky</h2>
+    <p>Zatím nic, ale budou tady fortky kytek co budem hledat v trave.</p>
+  </div>
+
+  <script>
+    // přepínání panelů
+    const tabs = document.querySelectorAll('.tab');
+    const contents = document.querySelectorAll('.tab-content');
+
+    tabs.forEach(tab => {
+      tab.addEventListener('click', () => {
+        tabs.forEach(t => t.classList.remove('active'));
+        contents.forEach(c => c.classList.remove('active'));
+
+        tab.classList.add('active');
+        document.getElementById('tab-content-' + tab.dataset.tab).classList.add('active');
+      });
+    });
+  </script>
 
   <script>
     fetch('text/main.md')
