--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
     <div id="ktky">Rostou...</div>
   </div>
 
+<!--
+
+##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--
+uvidím, co dává větší smysl, jestli ten složitý kód níže (lazy loading pro celý tab) nebo to natvrdo napsat v md kytky
+##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--##--
+
   <script>
     // přepínání panelů
     const tabs = document.querySelectorAll('.tab');
@@ -140,6 +146,7 @@
       });
     });
   </script>
+-->
 
   <script>
     fetch('text/main.md')
